--- a/full_model evaluation.ipynb
+++ b/full_model evaluation.ipynb
@@ -242,7 +242,7 @@
     "# === YOUR API CLIENT ===\n",
     "client = OpenAI(\n",
     "    base_url=\"https://api.sambanova.ai/v1\",\n",
-    "    api_key=\"4a81daa9-5f3d-409b-9f30-ebedb379219a\"\n",
+    "    api_key=\"KEY\"\n",
     ")\n",
     "\n",
     "# === Device & Models ===\n",
